src/styles/root.scss
:root {
	--section-spacing: 1.25rem;
	--footer-blur-radius: 3px;
}

html,
body,
* {
	font-family: 'Inter', sans-serif !important;
	box-sizing: border-box;
	text-decoration: none !important;
	transition: all 0.15s;
}

body,
#__next {
	min-height: 100vh;
	background-color: var(--bg);
}

div._footer_div {
	width: 100%;
	text-align: center;
	border-top: 1px solid var(--light-gray);
	padding: 1rem;
	position: fixed;
	bottom: 0;
	background: var(--bg);
}

@supports (backdrop-filter: none) {
	div._footer_div {
		background-color: var(--bg-alpha);
		backdrop-filter: blur(var(--footer-blur-radius));
	}
}

p._footer_p {
	font-size: 0.75rem;
}

a._social_link,
a._email {
	color: var(--accent);
	text-decoration: none;
}

h1 {
	margin-top: var(--section-spacing);
	font-weight: 500;
	font-size: 1.5rem;
	color: var(--fg);
	text-align: center;
}

p {
	color: var(--muted);
}

._container {
	display: flex;
	flex-direction: column;
	max-width: 33rem;
	margin: 0 auto;
	padding: 0rem 1rem;
}

._container_large {
	max-width: 40rem;
}

._section_hi {
	margin-top: 2rem;
}

@media screen and(max-width: 500px) {
	._section_hi {
		margin-top: 1rem;
	}
}

._links {
	text-align: center;
	margin: 1rem 0rem;
}

._link_wrapper {
	color: var(--fg);
}

._section_about p {
	margin: 1rem 0rem;
	font-weight: 300;
	line-height: 1.5rem;
}

b {
	font-weight: 500;
}

._grid {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
	grid-auto-rows: 1fr;
	gap: 0.75rem;
	margin: 1rem 0rem;
}

._card {
	border: 1px solid var(--light-gray);
	border-radius: 0.5rem;
	height: 100%;
	width: 100%;
	transition: all 0.2s;
	display: flex;
	flex-direction: column;
	justify-content: center;
	padding: 1rem;
}

._card:hover {
	box-shadow: 0 2.3px 2.2px rgba(0, 0, 0, 0.014),
		0 6.4px 6px rgba(0, 0, 0, 0.02), 0 15.4px 14.5px rgba(0, 0, 0, 0.026),
		0 51px 48px rgba(0, 0, 0, 0.04);
}

._card * {
	padding: 0.25rem 0rem;
}

._card h2 {
	color: var(--fg);
}

._card p {
	font-size: 0.8rem;
	line-height: 1.25rem;
}

._footer_color_switch {
	cursor: pointer;
}

._bottom {
	margin-bottom: 4rem;
}

._post_date {
	color: var(--muted);
	font-weight: 300;
	text-align: center;
	margin: 0.75rem 0rem 1.5rem 0rem;
}

._post_body {
	line-height: 1.25rem;
}

pre {
	background-color: var(--bg-color) !important;
	display: block;
	border: 1px solid var(--light-gray);
	padding: 0.5rem;
	margin: 1rem 0rem;
	border-radius: 0.25rem;
}

code {
	line-height: 1.5em !important;
	text-shadow: none !important;
}

pre *,
code *,
pre,
code {
	word-wrap: normal;
	word-break: normal;
	hyphens: none;
	overflow: auto;
}

.token {
	display: inline;
}

code {
	width: 100%;
}

pre span,
code {
	font-family: 'Fira Mono', monospace !important;
	font-size: 0.9rem !important;
	tab-size: 1rem;
}

._section_posts {
	margin-top: 0.5rem;
	margin-bottom: 4rem;
}

._post_body a {
	color: var(--accent) !important;
	text-decoration: none;
}

._post_body img {
	width: 100%;
	padding: 0.5rem 0rem;
}

hr {
	height: 1px;
	width: 100%;
	background-color: var(--light-gray);
	border: none;
	margin-bottom: 1rem;
}

._section_posts h1 {
	margin-bottom: 1rem;
}

._post_frag_title {
	color: var(--fg);
}

._post_frag_date {
	color: var(--muted);
	margin-bottom: 1rem;
}

._clickable {
	cursor: pointer;
}

._post_frag_date {
	font-size: 0.75rem;
	margin-top: 0.5rem;
}

ul,
ol,
li {
	color: var(--muted);
}

ol {
	list-style-type: decimal;
	list-style-position: inside;
	margin: 1rem 0rem;
	text-indent: -1.25rem;
	padding-left: 1.25rem;
}

li {
	line-height: 1.5rem;
}

b,
strong {
	font-weight: bold;
}

em,
i {
	font-style: italic;
}

._post_body p {
	margin: 1rem 0rem;
	line-height: 1.5rem;
}

